Renamed files for backward compatibility

--- a/ripplr/index.html
+++ b/ripplr/index.html
@@ -5,7 +5,7 @@
   <meta name="description" content="HTML5 canvas drawing app">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ripplr</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="ripplr/css/style.css">
 </head>
 <body>
   <div class="container">
@@ -36,6 +36,6 @@
     </div>
     <canvas id="main" height="600px" width="1000px"></canvas>
   </div>
-  <script src="js/ripplr.js"></script>
+  <script src="ripplr/js/ripplr.js"></script>
 </body>
 </html>
