--- a/nineboxes/index.html
+++ b/nineboxes/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Nine Boxes</title>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/nineboxes.css">
+  <link rel="stylesheet" href="nineboxes/css/nineboxes.css">
 </head>
 <body>
   <div class="boxes bord-rad">
@@ -30,6 +30,6 @@
       ><li><a href="#" id="next">Next &rsaquo;</a></li>
     </ul>
   </footer>
-  <script src="js/nineboxes.js" type="text/javascript"></script>
+  <script src="nineboxes/js/nineboxes.js" type="text/javascript"></script>
 </body>
 </html>
