--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -5,7 +5,7 @@
     <meta name="description" content="minesweeper">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Minesweeper</title>
-    <link rel="stylesheet" href="minesweeper/css/minesweeper.css">
+    <link rel="stylesheet" href="css/minesweeper.css">
   </head>
   <body>
     <div class="board">
@@ -88,6 +88,6 @@
       <div class="tile"></div>
     </div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="minesweeper/js/minesweeper.js"></script>
+    <script src="js/minesweeper.js"></script>
   </body>
 </html>
